--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -83,7 +83,7 @@ uk:
             description: "Програму Біблія вже встановлено майже 100 мільйонів разів - Неймовірне досягнення! Але ми тільки починаємо. Завантажте безкоштовну програму Біблія сьогодні, - і потім поділитися нею з друзями. Давайте творити історію разом."
         mobile: 
             title: "Програма Біблія"
-            description: "Читайте Боже Слово будь-коли і будь-де за допомогою програми Біблія від YouVersion. Поширюйте Письмо серед друзів, виділяючи уривки або роблячи на них закладки, плекайте щоденну звичку читати біблійні плани. Доступно для iOS, Android, Blackberry, Windows Phone та інших."
+            description: "Читайте Боже Слово будь-коли і будь-де за допомогою програми Біблія від YouVersion. Поширюйте Письмо серед друзів, виділяючи уривки або роблячи закладки, виробіть щоденну звичку читати біблійні плани. Додаток доступний для iOS, Android, Blackberry, Windows Phone та інших."
         site: 
             title: "Bible.com"
             description: "Принесіть красу та істину Біблії  у повсякденне життя. Разом з програмою Біблія від YouVersion ви зможете читати, дивитися, слухати та поширювати Біблію на вашому смартфоні, планшеті чи у інтернеті з сайту Bible.com."
@@ -128,6 +128,10 @@ uk:
             youversion: "YouVersion: The world’s most popular Bible App"
             in partnership: "in partnership with"
             one hope: "One Hope: Extraordinary Bible content for Kids"
+        links: 
+            apple: "https://itunes.apple.com/us/app/bible-for-kids/id668692393?ls=1&mt=8"
+            google: "http://play.google.com/store/apps/details?id=com.bible.kids"
+            amazon: "http://www.amazon.com/gp/product/B00GURLC40"
     now: "Зараз"
     celebrating 50MM: "Святкуємо 50 мільйонів встановлень!"
     link: "Посилання"
@@ -192,6 +196,7 @@ uk:
     reader: "Читанка"
     lifechurch short url: "LifeChurch.tv"
     about: "Про YouVersion"
+    versions link: "Версії"
     jobs: "Вакансії"
     privacy policy: "Політика приватності"
     terms: "Умови"
@@ -711,6 +716,20 @@ uk:
             reading: "читання Біблії"
             readings: "читання Біблії"
             readings 5 or more: "читання Біблії"
+        stats: 
+            friends reading: 
+                one: "%{count} друг підписався на цей план"
+                few: "%{count} друга підписалися на цей план"
+                many: "%{count} друзів підписалися на цей план"
+                other: "%{count} друга пілписались на цей план"
+            friends completed: 
+                one: "%{count} друг завершив цей план"
+                few: "%{count} друга завершили цей план"
+                many: "%{count} друзів завершили цей план"
+                other: "%{count} друга завершили цей план"
+            total completions: "Понад %{count} завершень"
+            view all: "Переглянути усе"
+            close: "Закрити"
         settings: "Налаштування"
         privacy: 
             visible to friends?: "Ви хочете, щоб ваші друзі бачити вашу діяльність з планом?"
@@ -914,7 +933,7 @@ uk:
         zip: "Індекс"
         creation form errors: "При обробці пожертвування виникла така помилка(и):"
     download ad: 
-        title: "Завантажте безкоштовну програму Біблії"
+        title: "Завантажте безкоштовну програму Біблія"
         description copy: "Сотні версій %{language_count}різними мовами - Біблія, яка крокує скрізь із вами."
         line 1: "Сотні перекладів на 100+"
         line 2: "різних мов - це все Біблія"
@@ -964,7 +983,7 @@ uk:
         h2: "Слово Боже з Вами."
         h3: "YouVersion є глобальною програмою"
         h3 sub: "Доступно на %{language_count} мов світу."
-        main: "Десятки мільйонів людей використовують програму Біблія, щоб зробити Слово Боже частиною свого повсякденного життя. Завантажте безкоштовну додаток і отримаєте доступ до закладок, нотаток і планів читання з будь-якої точки світу. Насолоджуйтесь сотнями переказів, в тому числі аудіобіблією, - і все за допомогою свого мобільного пристрою."
+        main: "Десятки мільйонів людей використовують програму Біблія, щоб зробити Слово Боже частиною свого повсякденного життя. Завантажте безкоштовну програму, і отримаєте доступ до закладок, нотаток і планів читання з будь-якої точки світу. Насолоджуйтесь сотнями переказів, в тому числі аудіобіблією, - і все за допомогою свого мобільного пристрою."
         button h4: "Перейти на Bible.com/app"
         button h4 sub: "На Вашому мобільному телефоні"
         download now: "Завантажити програму Біблія зараз"
@@ -1000,7 +1019,7 @@ uk:
                 now skipped: "Ця сторінка буде пропускатися."
             features: 
                 read heading: "Читайте Біблію."
-                read description: "Візьміть свій вибір з  <strong>сотень версій Біблії та мов</strong>. Безпосередньо порівнюйте дві версії. Ви навіть можете вибрати шрифт і розмір екрану. Налаштуйте як вам до вподоби ваше пізнання онлайн Біблії."
+                read description: "Зробіть свій вибір серед <a href='%{versions_path}'>сотень версій Біблії та мов.</a>Порівнюйте поруч дві версії. Ви можете вибрати розмір тексту та шрифт. Працюйте з онлайн Біблією саме так, як вам подобається."
                 study heading: "Вивчайте Біблію."
                 study description: "<strong>Виділяйте</strong> вашим улюбленим кольором, <strong>закладайте</strong> ваші улюблені вірші з Біблії і робіть нотатки про те, що ви вивчаєте. Ви не тільки проводите час з Словом Божим, ви створюєте історію вашої взаємодії з Біблією."
                 subscribe heading: "Підпишіться на Біблійні Плани."
