--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -97,37 +97,41 @@ ko:
         by youversion: "YouVersion"
         help your kids: "자녀들이 성경을 가까이 하도록 도와주세요"
         free download: "무료 다운로드"
-        app store: "앱스토어에서 구입 가능"
+        app store: "앱스토어에서 다운받기"
         google play: "구글 플레이에서 다운받기"
-        amazon: "안드로이드용 아마존 앱스토어에서 구입 가능"
-        app icon: "어린이 성경앱 아이콘"
+        amazon: "안드로이드용 아마존 앱스토어에서 다운받기"
+        app icon: "어린이 성경 앱 아이콘"
         jesus and friends: "예수님과 친구들"
-        interact text: "성경과의 교감을 통해 말씀이 생활의 일부가 되는 것을 경험하세요."
+        interact text: "늘 성경을 읽고 말씀과 함께 살아가요."
         story text 1: "에덴 동산"
         story text 2: "첫번째 크리스마스"
         story text 3: "요셉, 마리아, 그리고 말구유의 아기 예수"
         story text 4: "천사들이 예수의 탄생을 전하기 위해 목자들에게 나타남"
         story text 5: "예수님이  신체 장애자를 고치시다"
-        feature 1: "자녀들을 위한 무료 성경 체험"
+        feature 1: "어린이들을 위한<br>무료 성경"
         feature 2: "스마트폰과 타블렛을 위한 움직이는 이야기책"
-        feature 3: "닿으면 움직이는 애니메이션과 다채로운 색의 일러스트레이션"
-        feature 4: "게임과 활동들은 어린이들이 배운 것을 기억하도록 도와줍니다."
-        feature 5: "어린이들이 쉽게 따를 수있는 안내"
+        feature 3: "만지면 반응하는<br>아름다운 그림 성경"
+        feature 4: "게임과 활동을 통해<br>말씀 기억하기"
+        feature 5: "어린이들이 사용하기 쉬운 성경"
         share: 
-            tell friends: "친구들에게 어린이용 성경 앱에 대해 알려주세요."
-            facebook name: "어린이들을 위한 성경 앱"
-            facebook description: "어린이용 성경 앱이 출시되었습니다! 오늘 안드로이드나 iOS에서 무료 앱을 다운 받으세요. \n당신의 자녀들이 놀면서 배우면서 하나님의 말씀 안에서 성장할 수 있도록 도와주는 생생한 성경 이야기들.  www.bible.com/ko/kids"
+            tell friends: "어린이 성경 앱을 널리 알려주세요!"
+            facebook name: "어린이 성경 앱"
+            facebook description: "어린이 성경 앱이 출시되었습니다! 오늘 안드로이드나 iOS에서 무료 앱을 다운 받으세요. \n자녀들이 즐겁게 성경을 배우면서 말씀 안에서 성장할 수 있도록 도와주는 생생한 성경 이야기들.  www.bible.com/ko/kids"
             facebook link: "http://www.bible.com/ko/kids"
             facebook redirect: "http://www.bible.com/ko/kids"
-            twitter description: "@Youversion 의 어린이용 성경 앱이 출시되었습니다! 재미있으며 완전 무료입니다. Bible.com/ko/kids 에서 다운받으세요"
-            twitter hashtags: "어린이용 성경"
+            twitter description: "@Youversion 의 어린이 성경 앱이 출시되었습니다! 아주 재미있는 무료 앱입니다. Bible.com/ko/kids 에서 다운받으세요"
+            twitter hashtags: "어린이 성경"
             email: "이메일"
-            email subject: "어린이용 성경 앱이 출시되었습니다!"
-            email body: "기쁜 소식-어린이용 성경 앱이 출시되었습니다! 아이폰, 아이패드, 아이팟 터치, 그리고 안드로이드 기기에서 모든 내용들을 무료로 즐기실 수 있습니다. 이 앱은 터치하면 움직이는 애니매이션들과 다양한 활동이 포함되어 있는 성경 이야기들을 통해 여러분의 자녀들이 성경의 주요 이야기들을 배울 수 있도록 구성되어 있습니다. 여러분의 모바일 기기에서 Bible.com/ko/kids 으로 가셔서 지금 바로 다운로드 받으세요."
+            email subject: "어린이 성경 앱이 출시되었습니다!"
+            email body: "기쁜 소식-어린이 성경 앱이 출시되었습니다! 아이폰, 아이패드, 아이팟 터치, 그리고 안드로이드 기기에서 모든 내용들을 무료로 즐기실 수 있습니다. 이 앱은 터치하면 움직이는 애니매이션들과 다양한 활동이 포함되어 있는 성경 이야기들을 통해 여러분의 자녀들이 성경의 주요 이야기들을 배울 수 있도록 구성되어 있습니다. 여러분의 모바일 기기에서 Bible.com/ko/kids 으로 가셔서 지금 바로 다운로드 받으세요."
         partner: 
             youversion: "YouVersion:가장 인기있는 성경 앱"
             in partnership: "결연을 맺어"
-            one hope: "One hope: 어린이들을 위한 훌륭한 성경 내용"
+            one hope: "One hope: 어린이들을 위한 특별한 성경 콘텐츠"
+        links: 
+            apple: "https://itunes.apple.com/us/app/bible-for-kids/id668692393?ls=1&mt=8"
+            google: "http://play.google.com/store/apps/details?id=com.bible.kids"
+            amazon: "http://www.amazon.com/gp/product/B00GURLC40"
     now: "실시간 현황"
     celebrating 50MM: "축 5천만째 설치!"
     link: "링크"
@@ -192,6 +196,7 @@ ko:
     reader: "리더"
     lifechurch short url: "LifeChurch.tv"
     about: "소개"
+    versions link: "번역본"
     jobs: "채용정보"
     privacy policy: "개인정보취급정책"
     terms: "약관"
@@ -711,6 +716,14 @@ ko:
             reading: "읽기"
             readings: "읽기"
             readings 5 or more: "읽기"
+        stats: 
+            friends reading: 
+                other: "이 계획에 %{count} 명의 친구들이 신청하였습니다."
+            friends completed: 
+                other: "%{count}명의 친구가 이 계획을 마쳤습니다."
+            total completions: "%{count}명이 넘는 분들이 이 계획을 마쳤습니다."
+            view all: "전체 보기"
+            close: "닫기"
         settings: "설정"
         privacy: 
             visible to friends?: "친구들이 회원님의 성경읽기계획을 볼 수있도록 하겠습니까?"
@@ -1000,7 +1013,7 @@ ko:
                 now skipped: "더 이상 이 페이지를 보여주지 않습니다."
             features: 
                 read heading: "성경 읽기"
-                read description: "<strong>각종언어로 번역된 수백개의 번역본</strong> 이 있습니다 . 두개의 번역본을 비교하면서 읽거나, 원하시는 글꼴이나 크기로 온라인에서 성경을 읽을 수 있습니다."
+                read description: "<a href='%{versions_path}'>각종언어로 번역된 수백개의 번역본</a> 이 있습니다. 두개의 번역본을 비교하면서 읽거나, 원하시는 글꼴이나 크기로 온라인에서 성경을 읽을 수 있습니다. "
                 study heading: "성경 연구"
                 study description: "선호하시는 색깔로 본문을 <strong>하이라이트</strong> 하시거나, 원하는 구절을 <strong>책갈피</strong> 할 수있습니다. 그리고 묵상 내용을 노트에 남길 수도 있습니다. 하나님의 말씀을 읽는 것에 그치지 않고 읽으면서 느낀 점을 기록으로도 남길 수있습니다."
                 subscribe heading: "성경 읽기계획"
