--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -936,6 +936,10 @@ en:
     line 2:                                     "different languages - the Bible"
     line 3:                                     "that goes with you anywhere."
     download:                                   "Download Now"
+  download bafk ad:
+    title:                                      "Download the Bible App for Kids"
+    description copy:                           "The Bible App for Kids is a great way for your children to learn Biblical stories about Jesus."
+    download:                                   "Download Now"
   about page:
     relevancy:                                  "Relevancy"
     relevancy copy:                             "In generations past, the access people had to the Bible was very limited. Today, this is no longer the case. However, many people who have access to the Bible think its message does not apply to their lives. At the same time, there are others who believe there is a connection between the Bible and their every day experiences."
